--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -43,9 +43,19 @@ en:
         lname: "Last Name"
         fname: "First Name"
         ohip_num: "OHIP Card Number"
+        ohip_ver: "OHIP Card Version Code (2 letter)"
         dob: "Date Of Birth"
-                  
-  errors:
+      user:
+        ohip_num: "OHIP Card Number"
+        ohip_ver: "OHIP Card Version Code (2 letter)"
+    errors:
+      models:
+        user:
+          attributes:
+            patient_id:
+              blank:  "Patient was not found in database"
+            ohip_num:  
+              taken: "This Health Card is already registered. Please try to log in"
     messages:
       carrierwave_processing_error: "Cannot resize image."
       carrierwave_integrity_error: "Not an image."
@@ -58,13 +68,4 @@ en:
     mini_magick_processing_error: "Failed to manipulate with MiniMagick, maybe it is not an image? Original Error: %{e}"
     min_size_error: "File size should be greater than %{min_size}"
     max_size_error: "File size should be less than %{max_size}"
-
-    models:
-      user:
-        attributes:
-          patient_id:
-            blank: "Patient was not found in DB"
-
-
-
 
