--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -4,7 +4,7 @@ en:
   devise:
     confirmations:
       confirmed: "Your email address has been successfully confirmed. You can now log in to create your first virtual visit"
-      send_instructions: "Please check your email. If you don't see confirmation email, please check your spam folder"
+      send_instructions: "Please check your email. If you don't see confirmation email, please check your junk folder"
       send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
     failure:
       already_authenticated: "You are already signed in."
@@ -32,7 +32,7 @@ en:
       success: "Successfully authenticated from %{kind} account."
     passwords:
       no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
-      send_instructions: "Reset password email was sent to you. Please check your spam folder if you don't see it."
+      send_instructions: "Reset password email was sent to you. Please check your junk folder if you don't see it."
       send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
       updated: "Your password has been changed successfully. You are now signed in."
       updated_not_active: "Your password has been changed successfully."
